welcome.lessons.welcome.variables.Variables.scala.error
Variables:4: error: value ++ is not a member of Int
	step++;
            ^Variables:10: error: value -- is not a member of Int
	step--;
            ^