welcome.lessons.welcome.variables.Variables.scala.code
var step: Int = 0
while(!isOverBaggle()) {
	step++;
	forward();
}
pickupBaggle();
while(step >0) {
	backward();
	step--;
}

dropBaggle();